# tree-sitter-zigrush2022

./: Cargo.toml  README.md  binding.gyp  build.zig  grammar.js  package-lock.json  package.json  scanner.zig
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: simple.zr2
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: simple.txt
